--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,91 @@
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 /* You can add global styles to this file, and also import other style files */
+.deployment-title {
+    margin-bottom: 5px;
+    padding: 10px;
+    border: 3px solid rgba(200, 200, 200, .5);
+    border-radius: 5px;
+}
+.material-icons{
+    padding-right: 40px;
+}
+
+span.deployment-id {
+    color: grey;
+    font-size: 1em;
+    padding-left: 5px;
+}
+
+.deployment-metadata ul {
+    list-style-type: none;
+}
+
+.deployment-metadata .key {
+    font-weight: bold;
+}
+
+.deployment-metadata .value {
+    padding-left: 10px;
+}
+
+.sensors h3 {
+    display: inline;
+}
+
+.sensor {
+    padding-bottom: 20px;
+    
+}
+
+
+.sensor h4 {
+    padding-left: 40px;
+    color:blue
+}
+
+.sensor h4 {
+    display: inline;
+}
+
+.sensor-metadata ul {
+    list-style-type: none;
+}
+
+.sensor-metadata .key {
+    font-weight: bold;
+    
+}
+
+.sensor-metadata .value {
+    padding-left: 10px;
+}
+
+span.sensor-id {
+    color: grey;
+    font-size: .75em;
+    padding-left: 5px;
+}
+
+.backdrop{ 
+
+
+    background-color:rgba(0, 0, 0, 0.3);
+    
+    
+    position:fixed;
+    
+    
+    top:0;
+    
+    
+    left:0;
+    
+    
+    width:100%;
+    
+    
+    height:100vh;
+    
+    
+    }
